# media-box

./: LICENSE  README.md  SKILL.md  pyproject.toml
media_box/: SKILL.md  config.py  formatting.py  jackett.py  jellyfin.py  mover.py  qbittorrent.py  server.py  torrent_client.py  torrents.py  tvmaze.py
