[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-box-mcp"
version = "0.1.0"
description = "MCP server for managing Jellyfin, qBittorrent, torrent search (pyackett), and TVMaze"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "libtorrent>=2.0.11",
    "mcp[cli]>=1.0",
    "pyackett[cloudflare]>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["media_box"]

[project.scripts]
media-box-mcp = "media_box.server:main"
