[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-box-mcp"
version = "0.2.14"
description = "MCP server for managing Jellyfin, built-in torrent client, torrent search (pyackett), and TVMaze"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "libtorrent>=2.0.11",
    "mcp[cli]>=1.0",
    "pyackett[cloudflare]>=0.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["media_box"]

[project.scripts]
media-box-mcp = "media_box.server:main"
